# shashki

./: .gitignore  CMakeLists.txt  README  action_builder.cpp  action_builder.h  action_tree.cpp  action_tree.h  ai_player.cpp  ai_player.h  board_widget.cpp  board_widget.h  cell.cpp  direction.cpp  game.cpp  game.h  game_switcher.cpp  game_switcher.h  gui_player.cpp  gui_player.h  history_widget.cpp  history_widget.h  icons.qrc  main.cpp  main_window.cpp  main_window.h  player.h  segment.h  shashki.pro
board/: CMakeLists.txt  board_state.cpp  board_state.h  cell.cpp  cell.h  direction.h  minimax.cpp  minimax.h  position.cpp  position.h  role.cpp  role.h  segment.cpp
cliplay/: CMakeLists.txt  play.cpp
guiplay/: CMakeLists.txt  action_type.h  board_controller.cpp  board_controller.h  board_widget.cpp  board_widget.h  game.cpp  game.h  icons.qrc  main.cpp  main_window.cpp  main_window.h  root.h  root.tpp
